--- a/24242/index.html
+++ b/24242/index.html
@@ -7,7 +7,8 @@
   <title>Room Database</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
   <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="/static/codelab-elements.css">
+  <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../../elements/codelab.html">
   <style>
     .success {
       color: #1e8e3e;
@@ -83,11 +84,6 @@
       });
     });
   </script>
-
-  <script src="/static/native-shim.js"></script>
-  <script src="/static/custom-elements.min.js"></script>
-  <script src="/static/prettify.js"></script>
-  <script src="/static/codelab-elements.js"></script>
 </body>
 </html>
 
