--- a/room/index.html
+++ b/room/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="theme-color" content="#4F7DC9">
   <meta charset="UTF-8">
-  <title>RoomDatabase</title>
+  <title>Room Database</title>
   <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../../elements/codelab.html">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
@@ -20,22 +20,18 @@
 </head>
 <body unresolved class="fullbleed">
 
-  <google-codelab title="RoomDatabase"
+  <google-codelab title="Room Database"
                   environment="web"
-                  feedback-link="github.com/gerardfp">
+                  feedback-link="https://github.com/gerardfp">
     
-      <google-codelab-step label="Overview" duration="1">
-        <p>Aquest tutorial mostra com utilitzar Room</p>
-<aside class="warning"><p>Blablabla</p>
-</aside>
-<aside class="special"><p>Jajajaja</p>
-</aside>
+      <google-codelab-step label="Introducció" duration="0">
+        <p>Aquest tutorial mostra com utitlitzar Room</p>
 
 
       </google-codelab-step>
     
-      <google-codelab-step label="Crea el projecte" duration="1">
-        <p>Crea un nou projecte amb Android Studio</p>
+      <google-codelab-step label="Crea el projecte" duration="0">
+        <p>Crea un nou projecte en android studio</p>
 
 
       </google-codelab-step>
@@ -50,7 +46,7 @@
     ga('create', 'UA-49880327-14', 'auto');
 
     (function() {
-      var gaCodelab = '0';
+      var gaCodelab = '';
       if (gaCodelab) {
         ga('create', gaCodelab, 'auto', {name: 'codelab'});
       }
