--- a/MP08-P01/index.html
+++ b/MP08-P01/index.html
@@ -26,12 +26,13 @@
     
       <google-codelab-step label="Introducció" duration="0">
         <p>Esta práctica te enseña cómo crear tu primera aplicación para Android. Aprenderás cómo <strong>crear </strong>un proyecto de Android con Android Studio, y <strong>ejecutar </strong>una versión depurable de la aplicación.</p>
-<p>Antes de comenzar, descarga e instala Android Studio <a href="https://developer.android.com/studio/" target="_blank"><paper-button class="colored" raised><iron-icon icon="file-download"></iron-icon>Download Android Studio</paper-button></a></p>
+<p>Antes de comenzar, descarga e instala Android Studio </p>
+<p><a href="https://developer.android.com/studio/" target="_blank"><paper-button class="colored" raised><iron-icon icon="file-download"></iron-icon>Download Android Studio</paper-button></a></p>
 
 
       </google-codelab-step>
     
-      <google-codelab-step label="Crear un proyecto de Android" duration="0">
+      <google-codelab-step label="Crear un projecte Android" duration="0">
         <p>Esta lección le muestra cómo crear un proyecto nuevo Android con <a href="https://developer.android.com/studio/" target="_blank">Android Studio</a> y describe algunos de los archivos del proyecto.</p>
 <ol type="1" start="1">
 <li>En Android Studio, cree un nuevo proyecto:<br></li>
