--- a/widgets/index.html
+++ b/widgets/index.html
@@ -27,7 +27,7 @@
       <google-codelab-step label="Introducció" duration="0">
         <p>La clase <code>View</code> es el bloque de construcción básico para los componentes de Interfaz de Usuario. Una <code>View</code> ocupa un area rectangular en la pantalla y es responsable del dibujado y del manejo de eventos. <code>View</code> es la clase base para los widgets, los cuales se usan para crear componentes de Interfaz de Usuario interactivos (botones, campos de texto, etc.). La subclase <code>ViewGroup</code> es la clase base para <em>layouts</em>, que son contenedores invisibles que sustentan otras Views (o otros ViewGroups) y definen sus propiedades de disposición.</p>
 <p>El objetivo de esta práctica es introducir el uso de diferentes <strong>Widgets</strong> de Interfaz de Usuario.</p>
-<p>Actualmente existen un total de 139 subclases (directas e indirectas) de <a href="https://developer.android.com/reference/android/view/View.html" target="_blank"><code>View</code></a>. Veremos solamente algunas de ellas, en concreto:</p>
+<p>Actualmente existen un total de 139 subclases (directas e indirectas) de <a href="https://developer.android.com/reference/android/view/View.html" target="_blank"><code>View</code></a>. Veremos las siguientes:</p>
 <ul>
 <li>ToggleButton</li>
 <li>Switch</li>
@@ -88,7 +88,7 @@
 <p>Necesitarás incluir la dependencia de la librería <code>CardView</code> en el archivo <code>build.gradle</code> para el Module:app</p>
 <p>Ajusta el número de versión, para que coincida con tu <code>compileSdkVersion</code></p>
 <pre><code>dependencies {
-   // ... other depencencies
+   // ... other dependencies
 
    implementation &#39;com.android.support:cardview-v7:25.+&#39;
 }</code></pre>
