--- a/recyclerview/index.html
+++ b/recyclerview/index.html
@@ -44,6 +44,8 @@
    implementation &#39;com.android.support:cardview-v7:26.1.0&#39;
    implementation &#39;com.android.support:recyclerview-v7:26.1.0&#39;
 }</code></pre>
+<aside class="special"><p>Obtén los números de versión más actualizados de: <a href="https://developer.android.com/topic/libraries/architecture/adding-components.html" target="_blank">Adding Components to Your Project</a></p>
+</aside>
 
 
       </google-codelab-step>
@@ -89,13 +91,13 @@ protected void onCreate(Bundle savedInstanceState) {
 </td></tr>
 </table>
 <p>Para esta práctica usaremos el LinearLayoutManager</p>
-<p>Añade el elemento <code>&lt;RecyclerView&gt;</code> al layout <code>activity_main.xml</code></p>
+<p>Añade el elemento &lt;RecyclerView&gt; al layout activity_main.xml</p>
 <pre><code>&lt;android.support.v7.widget.RecyclerView
    android:id=&#34;@+id/poem_list&#34;
    android:layout_width=&#34;match_parent&#34;
    android:layout_height=&#34;match_parent&#34;
    android:scrollbars=&#34;vertical&#34; /&gt;</code></pre>
-<p>En el método <code>onCreate()</code> de la <code>MainActivity</code>, establece el <code>LinearLayoutManager</code> al <code>RecyclerView</code></p>
+<p>En el método onCreate() de la MainActivity, establece el LinearLayoutManager al RecyclerView</p>
 <pre><code>@Override
 protected void onCreate(Bundle savedInstanceState) {
    . . . .
@@ -108,15 +110,13 @@ protected void onCreate(Bundle savedInstanceState) {
       </google-codelab-step>
     
       <google-codelab-step label="Adapter" duration="0">
-        <p>El adaptador es el encargado de transformar los elementos del <code>ArrayList</code> en <code>Views</code> para insertarlas en el <code>RecyclerView</code>.</p>
-<p>Se crea una plantilla definiendo cómo tiene que ser una fila (<code>item_poem.xml</code>). El Adaptador creará diferentes Views a partir de la plantilla, y las rellenará con los datos de los elementos del <code>ArrayList</code>. </p>
+        <p>El adaptador es el encargado de transformar los elementos del ArrayList en Views para insertarlas en el RecyclerView.</p>
+<p>Se crea una plantilla definiendo cómo tiene que ser una fila (item_poem.xml). El Adaptador creará diferentes Views a partir de la plantilla, y las rellenará con los datos de los elementos del ArrayList. </p>
 <p><img style="max-width: 480.70px" src="img\16430b779b613c71.png"></p>
-<p>La clave del <code>RecyclerView</code> es que no crea un <code>View</code> para cada elemento del <code>ArrayList</code>, sino que crea las suficientes para que se muestren en pantalla, y cuando el usuario hace scroll sobre la lista, reutiliza las que han quedado invisibles, rellenándolas con los datos de los nuevos elementos del <code>ArrayList</code>.</p>
+<p>La clave del RecyclerView es que no crea un View para cada elemento del ArrayList, sino que crea las suficientes para que se muestren en pantalla, y cuando el usuario hace scroll sobre la lista, reutiliza las que han quedado invisibles, rellenándolas con los datos de los nuevos elementos del ArrayList.</p>
 <p><img style="max-width: 373.24px" src="img\e1204cf223775586.png"></p>
 <p><strong>⏩Crea la plantilla para los items de la lista</strong></p>
-<p>Crea un nuevo layout llamado </p>
-<pre>item_poem.xml</pre>
-<p> con el siguiente código:</p>
+<p>Crea un nuevo layout llamado item_poem.xml con el siguiente código:</p>
 <pre><code>&lt;?xml version=&#34;1.0&#34; encoding=&#34;utf-8&#34;?&gt;
 &lt;android.support.v7.widget.CardView xmlns:android=&#34;http://schemas.android.com/apk/res/android&#34;
    android:layout_width=&#34;match_parent&#34;
@@ -143,9 +143,7 @@ protected void onCreate(Bundle savedInstanceState) {
    &lt;/LinearLayout&gt;
 &lt;/android.support.v7.widget.CardView&gt;</code></pre>
 <p><strong>⏩Crea el Adaptador</strong></p>
-<p>Crea una nueva clase llamada </p>
-<pre>PoemsRecyclerAdapter</pre>
-<p> con el siguiente código:</p>
+<p>Crea una nueva clase llamada PoemsRecyclerAdapter con el siguiente código:</p>
 <pre><code>public class PoemsRecyclerAdapter extends RecyclerView.Adapter&lt;PoemsRecyclerAdapter.PoemViewHolder&gt;{
 
    List&lt;Poem&gt; list;
@@ -185,22 +183,17 @@ protected void onCreate(Bundle savedInstanceState) {
    }
 }</code></pre>
 <p><strong>⏩Establece el Adaptador al RecyclerView</strong></p>
-<p>En el método </p>
-<pre>onCreate()</pre>
-<p> de la </p>
-<pre>MainActivity</pre>
-<p>, añade el siguiente código:</p>
+<p>En el método onCreate() de la MainActivity, añade el siguiente código:</p>
 <pre><code>PoemsRecyclerAdapter poemsRecyclerAdapter = new PoemsRecyclerAdapter(poemList);
 recyclerView.setAdapter(poemsRecyclerAdapter);</code></pre>
-<p><strong>IMPORTANTE: Cuando se modifique el </strong></p>
-<pre>ArrayList</pre>
-<p><strong>, hay que notificar al adaptador, y este ordenará al RecyclerView actualizar la lista. Esto se hace con el siguiente método:</strong></p>
-<pre><code>poemsRecyclerAdapter.notifyDataSetChanged();</code></pre>
+<aside class="warning"><p><strong>IMPORTANTE: Cuando se modifique el ArrayList, hay que notificar al adaptador, y este ordenará al RecyclerView actualizar la lista. Esto se hace con el siguiente método:</strong></p>
+<p><strong><code>poemsRecyclerAdapter</code></strong><code>.notifyDataSetChanged();</code></p>
+</aside>
 <p>Tratemos de comprender el código del Adaptador:</p>
 <ol type="1" start="1">
-<li>En el constructor le pasamos el <code>ArrayList</code> que contendrá los poemas.</li>
-<li>El método <code>onCreateViewHolder()</code> lo llamará el <code>RecyclerView</code> cuando necesite una nueva <code>View</code> para representar un ítem.<br>Para obtener una <code>View</code> en la que representar un Poema, inflamos el layout <code>item_poem.xml</code><br>En lugar de retornarle al <code>RecyclerView</code> la <code>View</code>, le retornamos un objeto de la clase <code>PoemViewHolder</code>, que es la propia <code>View</code> pero con los receptáculos para los datos del poema guardados como varibles.</li>
-<li>El método <code>onBindViewHolder()</code> lo llamará el <code>RecyclerView</code> para rellenar los datos de un ítem. El <code>RecyclerView</code> nos pasa el <code>ViewHolder</code> y la posición, y lo rellenamos con el elemento del <code>ArrayList</code> que está en esa posición. </li>
+<li>En el constructor le pasamos el ArrayList que contendrá los poemas.</li>
+<li>El método onCreateViewHolder() lo llamará el RecyclerView cuando necesite una nueva <code>View</code> para representar un ítem.<br>Para obtener una View en la que representar un Poema, inflamos el layout item_poem.xml<br>En lugar de retornarle al RecyclerView la View, le retornamos un objeto de la clase PoemViewHolder, que es la propia View pero con los receptáculos para los datos del poema guardados como varibles.</li>
+<li>El método onBindViewHolder() lo llamará el RecyclerView para rellenar los datos de un ítem. El RecyclerView nos pasa el ViewHolder y la posición, y lo rellenamos con el elemento del <code>ArrayList</code> que está en esa posición. </li>
 </ol>
 
 
